--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <div id="header">
-        <H1 id="name">Name of this</H1>
+        <H1 id="name">My first App</H1>
     </div>
 
     <div id="content">
         <div id="numbers">
-            <p>Parameter name</p>
-            <p>Parameter val</p>
-            <p>Parameter mean</p>
-            <p>Parameter marker</p>
+            <p id="parmName">Parameter name</p>
+            <p id="parmValue">Parameter val</p>
+            <p id="parmMean">Parameter mean</p>
+            <p id="parmMarker">Parameter marker</p>
         </div>
 
-        <button id="refresh" type="button">Refresh</button>
+        <button id="refresh" type="button" onclick="refresh()">Refresh</button>
 
         <div id="graph">
             <p>Plot de graph here</p>
