More JS, fetch json

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p id="parmMarker">Parameter marker</p>
         </div>
 
-        <button id="refresh" type="button" onclick="refresh()">Refresh</button>
+        <button id="refresh" type="button" onclick="refreshButton()">Refresh</button>
 
         <div id="graph">
             <p>Plot de graph here</p>
