--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="header">
-        <H1 id="name">My first App</H1>
+        <H1 id="stationName">My first App</H1>
     </div>
 
     <div id="content">
