--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="index.js"></script>
     <title>Document</title>
 </head>
@@ -23,7 +24,7 @@
         <button id="refresh" type="button" onclick="refreshButton()">Refresh</button>
 
         <div id="graph">
-            <p>Plot de graph here</p>
+            <p id="PlotGraph">Plot de graph here</p>
         </div>
     </div>
 </body>
