--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="index.js"></script>
+    <link   rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Orbitron' >
     <link   type="text/css" rel="stylesheet" href="index.css">
     <title>MFA</title>
 </head>
