first CSS, some more

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <script type="text/javascript" src="index.js"></script>
     <link   rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Orbitron' >
     <link   type="text/css" rel="stylesheet" href="index.css">
-    <title>MFA</title>
+    <title>MyFirstAppS</title>
 </head>
 <body>
     <div id=application>
         <h1 id=applicationName>Wheater</h1>
     
         <div id="station">
-            <H1 id="stationName">My first App</H1>
+            <h2 id="stationName">My first App</h2>
         </div>
 
         <div id="parameter">
